fix title em wrap on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -807,6 +807,8 @@ $mobileMinWidth: 414px;
     border: 2.5px solid $color-ejf-red;
     padding: 0 0.1em;
     margin: 0 -0.1em;
+
+    white-space: nowrap;
   }
 }
 
